# ci-test

./: .gitignore  CMakeLists.txt  README.md
.circleci/: config.yml
src/lib/: BoolExample.h  JsonParser.cpp  JsonParser.h
tests/: JsonParserTests.cpp  example.cpp
